--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Refresh" content="0; URL="http://106.54.160.227:8090/">
+    <meta http-equiv="Refresh" content="0; URL=http://106.54.160.227:8090/">
     <title>Document</title>
 </head>
 <body>
